--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,22 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
   pool: 5
-  timeout: 5000
+  host: 10.131.137.216
+  port: 3306
+  username: root
+  password: bkiOBN51
 
 development:
   <<: *default
-  database: db/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+  database: books_development
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: books_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: books_producion
