--- a/config/database.yml
+++ b/config/database.yml
@@ -4,31 +4,31 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
-#default: &default
-#  adapter: mysql2
-#  encoding: utf8
-#  reconnect: false
-#  pool: 5
-#  host: 10.131.137.216
-#  port: 3306
-#  username: booksRoot
-#  password: bkiOBN51
-
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
   pool: 5
-  timeout: 5000
+  host: 10.131.137.216
+  port: 3306
+  username: booksRoot
+  password: bkiOBN51
+
+#default: &default
+#  adapter: sqlite3
+#  pool: 5
+#  timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
-#  database: books_development
+#  database: db/development.sqlite3
+  database: books_development
 test:
   <<: *default
-  database: db/test.sqlite3
-#  database: books_test
+#  database: db/test.sqlite3
+  database: books_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
-#  database: books_producion
+#  database: db/production.sqlite3
+  database: books_producion
