Cambios en el git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,6 @@
 !/log/.keep
 !/tmp/.keep
 /public/system/libros/*
-/config/secrets.yml
+config/secrets.yml
 # Ignore Byebug command history file.
 .byebug_history
